Update SQL Window Functions for Northwind Traders.ipynb

--- a/SQL Window Functions for Northwind Traders.ipynb
+++ b/SQL Window Functions for Northwind Traders.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "%load_ext sql\n",
     "\n",
-    "connection_string = f'postgresql://postgres:TJDdnr!23@localhost:5432/dataquest_sql_project'\n",
+    "connection_string = f'postgresql://postgres:PASSWORD@localhost:5432/dataquest_sql_project'\n",
     "\n",
     "%sql $connection_string"
    ]
